--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "bun-types": "latest"
   },
@@ -10,6 +11,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "redis": "^4.6.10",
+    "util": "^0.12.5"
   }
 }
