--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "redis": "^4.6.10",
-    "util": "^0.12.5"
+    "redis": "^4.6.10"
   }
 }
